opa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa
  namespace: opa
  annotations:
    kubernetes.io/spec.ingressClassName: "nginx"
    cert-manager.io/issuer: "opa-ca-issuer"   
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: opa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opa-opa-kube-mgmt
                port:
                  number: 8181
  tls:
    - hosts:
        - opa.local
      secretName: opa.local-tls
